--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,8 +9,20 @@
 <body>
   
   <header>
-    <h1>My E-Commerce Store</h1>
-  </header>
+  <div class="container">
+    <div class="logo">
+      <h1>My E-Commerce Store</h1>
+    </div>
+    
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="products.html">Products</a>
+      <a href="cart.html">Cart</a>
+      <a href="orders.html">My Orders</a>
+    </nav>
+  </div>
+</header>
+
   
   <main>
     <h2>Welcome!</h2>
