--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -6,17 +6,22 @@
   <title>Checkout - My Store</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/checkout.css">
+  <link rel="stylesheet" href="css/loading.css">
 </head>
 <body>
   
   <header>
     <div class="container">
       <h1>My E-Commerce Store</h1>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="cart.html">Cart</a>
-      </nav>
+     <nav>
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="cart.html" style="position: relative;">
+    Cart
+    <span id="cart-badge" class="cart-badge" style="display: none;">0</span>
+  </a>
+  <a href="orders.html">My Orders</a>
+</nav>
     </div>
   </header>
   
