--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-Commerce Store</title>
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/loading.css">
 </head>
 <body>
   
@@ -14,12 +15,15 @@
       <h1>My E-Commerce Store</h1>
     </div>
     
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a href="cart.html">Cart</a>
-      <a href="orders.html">My Orders</a>
-    </nav>
+   <nav>
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="cart.html" style="position: relative;">
+    Cart
+    <span id="cart-badge" class="cart-badge" style="display: none;">0</span>
+  </a>
+  <a href="orders.html">My Orders</a>
+</nav>
   </div>
 </header>
 
