--- a/frontend/orders.html
+++ b/frontend/orders.html
@@ -6,6 +6,7 @@
   <title>My Orders - My Store</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/order.css">
+  <link rel="stylesheet" href="css/loading.css">
 </head>
 <body>
   
@@ -13,11 +14,14 @@
     <div class="container">
       <h1>My E-Commerce Store</h1>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="products.html">Products</a>
-        <a href="cart.html">Cart</a>
-        <a href="orders.html">My Orders</a>
-      </nav>
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="cart.html" style="position: relative;">
+    Cart
+    <span id="cart-badge" class="cart-badge" style="display: none;">0</span>
+  </a>
+  <a href="orders.html">My Orders</a>
+</nav>
     </div>
   </header>
   
