--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -6,6 +6,7 @@
   <title>Shopping Cart - My Store</title>
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/cart.css">
+  <link rel="stylesheet" href="css/loading.css">
 </head>
 <body>
   
